refactor(model): improve null safety