@@ -10,22 +10,22 @@ import raylras.zen.model.symbol.ParameterSymbol;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public final class FormalParameterResolver {
 
     private FormalParameterResolver() {}
 
-    public static List<ParameterSymbol> getFormalParameterList(ParseTree cst, CompilationUnit unit) {
+    public static Optional<List<ParameterSymbol>> getParameterList(ParseTree cst, CompilationUnit unit) {
         Objects.requireNonNull(cst);
         Objects.requireNonNull(unit);
-        return cst.accept(new FormalParameterVisitor(unit));
+        return Optional.ofNullable(cst.accept(new FormalParameterVisitor(unit)));
     }
 
     private static final class FormalParameterVisitor extends Visitor<List<ParameterSymbol>> {
-        private final CompilationUnit unit;
+        final CompilationUnit unit;
 
-        public FormalParameterVisitor(CompilationUnit unit) {
+        FormalParameterVisitor(CompilationUnit unit) {
             this.unit = unit;
         }
 
@@ -54,7 +54,7 @@ public final class FormalParameterResolver {
             return ctx.formalParameter().stream()
                     .map(unit::getSymbol)
                     .map(ParameterSymbol.class::cast)
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
